--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ Werkzeug==1.0.1
 xgboost==1.4.2
 scikit-learn==0.23.1
 joblib==0.16.0
-scipy==1.5.0
+scipy>=0.15.1
 threadpoolctl==2.1.0
 matplotlib>=1.4.3
 pandas>=0.19
